src/objects/Outcome_Influencing_Contact__c.object
<CustomObject>
    <description>Contacts who play a role in influencing this Outcome</description>
    <fields>
        <fullName>Alignment__c</fullName>
        <inlineHelpText>How close are they to our position?</inlineHelpText>
        <label>Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weakly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weakly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Person who will influence this Outcome</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>R00N700000026TP9EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Influence_Role__c</fullName>
        <inlineHelpText>Role this Contact is playing in this Outcome</inlineHelpText>
        <label>Influence Role</label>
        <picklist>
            <picklistValues>
                <fullName>Businesses Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker - One of Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker - Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial supporters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legislative champions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message amplifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Expert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>Outcome this Contact will influence</inlineHelpText>
        <label>Outcome</label>
        <referenceTo>Outcome__c</referenceTo>
        <relationshipLabel>Influencers - Contacts</relationshipLabel>
        <relationshipName>Contact_Influencers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Outcome-Influencing Contact</label>
    <nameField>
        <displayFormat>OI-{00000}</displayFormat>
        <label>Outcome-Influencing Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome-Influencing Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>